--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ a.hyper:hover{
 body{
 	margin: 0;
 	padding: 0;
+	height: 100%;
+ 	position: relative;
 }
 /* Adds a dark grey background color to the header */
 header{
@@ -41,10 +43,25 @@ header img{
 .facebook img{
 	padding-right: 35px;
 }
+.row{
+	display: grid;
+	grid-template-rows: 60px 350px;
+	grid-template-columns: auto 60% 30% auto;
+}
+.introduction{
+	padding-right: 25px;
+	grid-area: 2/2/3/3;
+}
+.picture{
+	grid-area: 2/3/3/4;
+}
+.picture img{
+	display: block;
+	max-height: 350px;
+	width: auto;
+}
 footer{
-    left: 0;
-	right: 0;
-	bottom: 0;
+	width: 100%;
 	height: 100px;
 	background: black;
 	opacity: 0.95;
