--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* Effects the sizing and font of every element */
 * {
 	box-sizing: border-box;
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 /* Gets rid of underlined hyperlinks until hovering over */
 a.hyper:link{
@@ -10,13 +9,13 @@ a.hyper:link{
 a.hyper:hover{
 	text-decoration:underline;
 }
+h2{
+	font-weight: normal;
+}
 body{
 	margin: 0;
 	padding: 0;
-	height: 100%;
- 	position: relative;
 }
-/* Adds a dark grey background color to the header */
 header{
 	position: fixed;
 	top: 0;
@@ -27,40 +26,74 @@ header{
 	opacity: 0.85;
 	display: flex;
   	justify-content: space-between;
+  	align-items: center;
 }
-/* Styles text inside the header */
 header h2{
   	padding-left: 30px;
 	color: white;
 }
-header li{
-	display: inline-block;
+header ul{
+	padding-top: 7px;
 }
-header img{
-	padding: 0 0 5px 5px; 
+header li {
+    display: inline-block;
+    padding: 0px 2px;
+  }
+header img{ 
 	height: 40px;
 }	
-.facebook img{
-	padding-right: 35px;
+#facebook img{
+	padding-right: 30px;
 }
-.row{
+#row1{
 	display: grid;
-	grid-template-rows: 60px 350px 150px;
+	grid-template-rows: 30px 300px;
 	grid-template-columns: auto 60% 30% auto;
 }
 .introduction{
+	margin-top: 20px;
 	grid-area: 2/2/3/3;
 }
-.picture{
+#headshot{
 	grid-area: 2/3/3/4;
-	padding-left: 40px;
+	padding-left: 20px;
 }
-.picture img{
+#headshot img{
 	display: block;
 	max-height: 300px;
 	width: auto;
 }
+#row2{
+	display: grid;
+	grid-template-rows: 40px 300px 150px;
+	grid-template-columns: 75px 2fr 3fr 75px 75px;
+}
+#leftarrow{
+	grid-area: 2/1/3/2;
+	background: rgb(236,228,228);
+}
+#rightarrow{
+	grid-area: 2/4/3/5;
+	background: rgb(236,228,228);
+}
+.slidepic{
+	grid-area: 2/2/3/3;
+	padding: 40px 60px;
+	background: rgb(236,228,228);
+}
+.slidepic img{
+	display: block;
+	max-height: 220px;
+	width: auto;
+}
+.slidetext{
+	padding: 75px 50px;
+	grid-area: 2/3/3/4;
+	background: rgb(236,228,228);
+	display: flex;
+}
 footer{
+	position: absolute;
 	width: 100%;
 	height: 100px;
 	background: black;
