--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ h3{
 body{
 	font-family: "Montserrat", sans-serif;
 	margin: 0;
-	padding: 0;
 	position: relative;
-  	min-height: 100vh;
+  	/*min-height: 100vh;*/
 }
 header{
 	display: flex;
@@ -53,18 +52,17 @@ header li {
 header img{ 
 	height: 40px;
 }	
+#header{
+	height: 60px;
+}
 #facebook img{
 	padding-right: 30px;
 }
+
 #container{
-	padding-top: 10px;
-  	padding-bottom: 120px;
 	display: grid;
-	grid-template-rows: repeat(2, 300px);
-	grid-template-columns: 1fr 8fr 2fr 8fr 1fr;
-	grid-row-gap: 25px;
 }
-@media(max-width: 850px){
+/*@media(max-width: 850px){
 	#container{
 		padding-top: 10px;
 	  	padding-bottom: 120px;
@@ -73,89 +71,102 @@ header img{
 	  	grid-row-gap: 0px;
 	  	justify-items: center;
 	}
+}*/
+#intro{
+	display: grid;
+	grid-row: 1;
+	margin: 40px;
 }
-.introduction{
-	grid-area: 1/2/2/4;
+#introductionText{
+	grid-column: 2;
 	margin-top: 20px;
 }
 @media(max-width: 850px){
-	.introduction{
-		grid-area: 2/2/3/3;
-		text-align: center;
+	#introductionText{
+		grid-row: 2;
 	}
 }
-#headshot{
-	grid-area: 1/4/2/5;
+#introductionPic{
+	grid-column: 3;
 	padding-left: 50px;
 }
 @media(max-width: 850px){
-	#headshot{
-		grid-area: 1/2/2/3;
+	#introductionPic{
+		grid-row: 1;
+		grid-column: 2;
+		justify-self: center;
 	}
 }
-#headshot img{
+#introductionPic img{
 	display: block;
 	max-height: 300px;
 	width: auto;
 }
+
+#carouselBanner{
+	background-color: rgb(236,228,228);
+	grid-row: 3;
+	display: grid;
+	margin-bottom: 40px;
+}
+button{
+	background-color: rgb(236,228,228);
+	border: none;
+}
 #leftarrow{
-	grid-area: 2/1/3/2;
+	grid-column: 1;
 	background: rgb(236,228,228);
-	justify-self: right;
-	min-width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	padding-left: 20px;
 }
 @media(max-width: 850px){
 	#leftarrow{
-		grid-area: 3/1/5/2;
-		min-width: 80%;
+		grid-row: 1 / 3;
 	}
 }
-.slidepic{
-	grid-area: 2/2/3/3;
-	padding: 40px 60px;
-	background: rgb(236,228,228);
-	justify-self: stretch;
+.carouselPic{
+	grid-column: 2;
+	padding: 40px;
+	padding-left: 60px;
+	padding-right: 30px;
 }
 @media(max-width: 850px){
-	.slidepic{
-		grid-area: 3/2/4/3;
+	.carouselPic{
+		grid-row: 1;
+		padding-top: 40px;
+		padding-bottom: 20px;
+		place-self: center;
 	}
 }
-.slidepic img{
+.carouselPic img{
 	max-height: 220px;
 	width: auto;
 }
-.slidetext{
-	grid-area: 2/3/3/5;
+.carouselText{
+	grid-column: 3;
 	height: 300px;
-	padding: 75px 50px;
-	background: rgb(236,228,228);
+	padding: 75px;
+	padding-left: 30px;
+	padding-right: 60px;
 }
 @media(max-width: 850px){
-	.slidetext{
-		grid-area: 4/2/5/3;
-		height: 200px;
-		align-items: center;
+	.carouselText{
+		grid-row: 2;
+		grid-column: 2;
+		padding: 0px 50px 20px;
+		height: auto;
 	}
 }
 #rightarrow{
-	grid-area: 2/5/3/6;
+	grid-column: 4;
 	background: rgb(236,228,228);
-	justify-self: left;
-	min-width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	padding-right: 20px;
 }
 @media(max-width: 850px){
 	#rightarrow{
-		grid-area: 3/3/5/4;
-		min-width: 80%;
+		grid-row: 1 / 3;
 	}
 }
+
 footer{
 	position: absolute;
   	bottom: 0;
@@ -163,4 +174,7 @@ footer{
   	height: 100px;
 	background: black;
 	opacity: 0.95;
+}
+#footer{
+	height: 100px;
 }
