--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body{
 	font-family: "Montserrat", sans-serif;
 	margin: 0;
 	position: relative;
-  	/*min-height: 100vh;*/
+  	min-height: 100vh;
+  	display: grid;
 }
 header{
 	display: flex;
@@ -58,24 +59,21 @@ header img{
 #facebook img{
 	padding-right: 30px;
 }
+.header{
+	grid-column: 1 / 3;
+	grid-row: 1;
+}
 
 #container{
+	grid-column: 1 / 3;
+	grid-row: 2;
 	display: grid;
 }
-/*@media(max-width: 850px){
-	#container{
-		padding-top: 10px;
-	  	padding-bottom: 120px;
-	  	grid-template-rows: repeat(2, 300px 200px);
-	  	grid-template-columns: 2fr 8fr 2fr;
-	  	grid-row-gap: 0px;
-	  	justify-items: center;
-	}
-}*/
+
 #intro{
 	display: grid;
 	grid-row: 1;
-	margin: 40px;
+	margin: 40px 100px;
 }
 #introductionText{
 	grid-column: 2;
@@ -84,23 +82,23 @@ header img{
 @media(max-width: 850px){
 	#introductionText{
 		grid-row: 2;
+		width: 500px;
 	}
 }
 #introductionPic{
 	grid-column: 3;
 	padding-left: 50px;
+	max-height: 300px;
+	width: auto;
 }
 @media(max-width: 850px){
 	#introductionPic{
 		grid-row: 1;
-		grid-column: 2;
+		grid-column: 1 / 3;
+		height: 200px;
+		padding-left: 0;
 		justify-self: center;
 	}
-}
-#introductionPic img{
-	display: block;
-	max-height: 300px;
-	width: auto;
 }
 
 #carouselBanner{
@@ -118,63 +116,86 @@ button{
 	background: rgb(236,228,228);
 	padding-left: 20px;
 }
-@media(max-width: 850px){
-	#leftarrow{
-		grid-row: 1 / 3;
-	}
+.carousel{
+	grid-column: 2;
+	display: grid;
 }
 .carouselPic{
-	grid-column: 2;
-	padding: 40px;
-	padding-left: 60px;
-	padding-right: 30px;
+	grid-column: 1;
+	padding: 30px 30px 5px 60px;
+	height: 250px;
+	width: 450px;
 }
 @media(max-width: 850px){
 	.carouselPic{
 		grid-row: 1;
-		padding-top: 40px;
-		padding-bottom: 20px;
-		place-self: center;
+		padding-top: 30px;
+		padding-bottom: 5px;
+		height: 200px;
+		width: 350px;
+		justify-self: center;
 	}
 }
-.carouselPic img{
-	max-height: 220px;
-	width: auto;
-}
 .carouselText{
-	grid-column: 3;
-	height: 300px;
-	padding: 75px;
-	padding-left: 30px;
-	padding-right: 60px;
+	grid-column: 2;
+	padding: 75px 60px 5px 30px;
+	height: 240px;
 }
 @media(max-width: 850px){
 	.carouselText{
+		grid-column: 1;
 		grid-row: 2;
-		grid-column: 2;
-		padding: 0px 50px 20px;
-		height: auto;
+		height: 70px;
+		padding: 0px 50px 5px;
 	}
 }
 #rightarrow{
-	grid-column: 4;
-	background: rgb(236,228,228);
+	grid-column: 3;
 	padding-right: 20px;
 }
-@media(max-width: 850px){
-	#rightarrow{
-		grid-row: 1 / 3;
-	}
+#leftarrow, #rightarrow{
+	grid-row: 1 / 3;
+	background: rgb(236,228,228);
+	font-weight: bold;
+  	font-size: 18px;
+  	color: #717171;
+}
+#leftarrow:hover, #rightarrow:hover {
+  color: black;
+}
+.hidden{
+	display: none;
+}
+#dots{
+	text-align: center;
+	grid-column: 2 / 3;
+	padding-bottom: 15px;
+}
+.dot {
+	  cursor: pointer;
+	  height: 10px;
+	  width: 10px;
+	  margin: 0 2px;
+	  background-color: #717171;
+	  border-radius: 50%;
+	  display: inline-block;
+	  transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+  	background-color: black;
 }
 
 footer{
 	position: absolute;
   	bottom: 0;
-  	width: 100%;
-  	height: 100px;
 	background: black;
 	opacity: 0.95;
 }
-#footer{
+footer, #footer{
 	height: 100px;
+}
+.footer{
+	grid-column: 1 / 3;
+	grid-row: 3;
+	width: 100%;
 }
