--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ header{
 header h2{
   	padding-left: 30px;
 	color: white;
+	font-size: 1.33em;
+}
+@media(min-width: 775px){
+	header h2{
+	  	font-size: 1.5em;
+	}
 }
 header ul{
 	display: flex;
@@ -139,10 +145,10 @@ button{
 }
 .carouselPic{
 	grid-row: 1;
-	padding-top: 30px;
+	padding-top: 40px;
 	padding-bottom: 5px;
 	height: 200px;
-	width: 300px;
+	width: 260px;
 	justify-self: center;
 }
 @media(min-width: 775px){
@@ -157,7 +163,7 @@ button{
 	grid-column: 1;
 	grid-row: 2;
 	height: 145px;
-	padding: 0px 50px 5px;
+	padding: 0px 10px 5px;
 }
 @media(min-width: 775px){
 	.carouselText{
