--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@ a.hyper:hover{
 h3{
 	font-weight: normal;
 	font-size: 0.8em;
+
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	h3{
-		font-size: 1.35vw;
+		font-size:calc(0.8em + 0.1vw);
 	}
-}
+}*/
 body{
 	font-family: "Montserrat", sans-serif;
 	margin: 0;
@@ -43,7 +44,7 @@ header h2{
 	color: white;
 	font-size: 1.33em;
 }
-@media(min-width: 775px){
+@media(min-width: 426px){
 	header h2{
 	  	font-size: 1.5em;
 	}
@@ -63,7 +64,6 @@ header img{
 	padding-right: 30px;
 }
 .header{
-	grid-column: 1 / 3;
 	grid-row: 1;
 }
 #header{
@@ -71,7 +71,6 @@ header img{
 }
 
 #container{
-	grid-column: 1 / 3;
 	grid-row: 2;
 	display: grid;
 }
@@ -80,11 +79,11 @@ header img{
 	display: grid;
 	grid-row: 1;
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	#intro{
 		padding: 40px;
 	}
-}
+}*/
 #introductionText{
 	grid-row: 2;
 	width: 90vw;
@@ -92,14 +91,14 @@ header img{
 	text-align: center;
 	place-self: center;
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	#introductionText{
 		width: 50vw;
 		grid-row: 1;
 		padding-top: 20px;
 		text-align: left;
 	}
-}
+}*/
 #introductionPic{
 	grid-row: 1;
 	grid-column: 1 / 3;
@@ -107,7 +106,7 @@ header img{
 	padding-top: 20px;
 	justify-self: center;
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	#introductionPic{
 		grid-column: 3;
 		padding-left: 10px;
@@ -116,7 +115,7 @@ header img{
 		width: auto;
 		justify-self: left;
 	}
-}
+}*/
 
 #carouselBanner{
 	background-color: rgb(236,228,228);
@@ -138,41 +137,42 @@ button{
 	display: grid;
 	height: calc(420px - (1/7 * 90vw));
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	.carousel{
 		height: auto;
 	}
-}
+}*/
 .carouselPic{
 	grid-row: 1;
-	padding-top: 40px;
-	padding-bottom: 5px;
-	height: 200px;
-	width: 260px;
+	padding-top: 33px;
+	width: 80%;
+	max-width: 250px;
 	justify-self: center;
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	.carouselPic{
 		grid-column: 1;
-		padding: 30px 30px 20px 60px;
-		height: 220px;
-		width: 400px;
+		padding: 30px 0px 15px 40px;
+		height: 100%;
+		width: 100%;
 	}
-}
+}*/
 .carouselText{
 	grid-column: 1;
 	grid-row: 2;
-	height: 145px;
-	padding: 0px 10px 5px;
+	padding: 0px 32px;
+	place-self: center;
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	.carouselText{
 		grid-column: 2;
 		grid-row: 1;
-		padding: 30px 60px 5px 30px;
-		font-size: 
 	}
 }
+@media(min-width: 426px){
+	#compsciText{
+	}
+}*/
 #rightarrow{
 	grid-column: 3;
 	padding-right: 20px;
@@ -190,7 +190,7 @@ button{
 #dots{
 	text-align: center;
 	grid-column: 2 / 3;
-	padding-bottom: 15px;
+	padding: 15px;
 }
 .dot {
 	  cursor: pointer;
@@ -218,13 +218,12 @@ footer{
 footer, #footer{
 	height: 75px;
 }
-@media(min-width: 775px){
+/*@media(min-width: 426px){
 	footer, #footer{
 		height: 100px;
 	}
-}
+}*/
 .footer{
-	grid-column: 1 / 3;
 	grid-row: 3;
 	width: 100%;
 }
