--- a/style.css
+++ b/style.css
@@ -13,13 +13,7 @@ a.hyper:hover{
 h3{
 	font-weight: normal;
 	font-size: 0.8em;
-
 }
-/*@media(min-width: 426px){
-	h3{
-		font-size:calc(0.8em + 0.1vw);
-	}
-}*/
 body{
 	font-family: "Montserrat", sans-serif;
 	margin: 0;
@@ -43,11 +37,6 @@ header h2{
   	padding-left: 30px;
 	color: white;
 	font-size: 1.33em;
-}
-@media(min-width: 426px){
-	header h2{
-	  	font-size: 1.5em;
-	}
 }
 header ul{
 	display: flex;
@@ -73,17 +62,13 @@ header img{
 #container{
 	grid-row: 2;
 	display: grid;
+	margin: 20px 0;
 }
 
 #intro{
 	display: grid;
 	grid-row: 1;
 }
-/*@media(min-width: 426px){
-	#intro{
-		padding: 40px;
-	}
-}*/
 #introductionText{
 	grid-row: 2;
 	width: 90vw;
@@ -91,37 +76,18 @@ header img{
 	text-align: center;
 	place-self: center;
 }
-/*@media(min-width: 426px){
-	#introductionText{
-		width: 50vw;
-		grid-row: 1;
-		padding-top: 20px;
-		text-align: left;
-	}
-}*/
 #introductionPic{
 	grid-row: 1;
-	grid-column: 1 / 3;
+	grid-column: 1 / 2;
 	height: 200px;
-	padding-top: 20px;
-	justify-self: center;
+	place-self: center;
 }
-/*@media(min-width: 426px){
-	#introductionPic{
-		grid-column: 3;
-		padding-left: 10px;
-		height: auto;
-		max-height: 300px;
-		width: auto;
-		justify-self: left;
-	}
-}*/
 
 #carouselBanner{
 	background-color: rgb(236,228,228);
 	grid-row: 3;
 	display: grid;
-	margin-bottom: 20px;
+	padding: 20px 0;
 }
 button{
 	background-color: rgb(236,228,228);
@@ -129,50 +95,8 @@ button{
 }
 #leftarrow{
 	grid-column: 1;
-	background: rgb(236,228,228);
 	padding-left: 20px;
 }
-.carousel{
-	grid-column: 2;
-	display: grid;
-	height: calc(420px - (1/7 * 90vw));
-}
-/*@media(min-width: 426px){
-	.carousel{
-		height: auto;
-	}
-}*/
-.carouselPic{
-	grid-row: 1;
-	padding-top: 33px;
-	width: 80%;
-	max-width: 250px;
-	justify-self: center;
-}
-/*@media(min-width: 426px){
-	.carouselPic{
-		grid-column: 1;
-		padding: 30px 0px 15px 40px;
-		height: 100%;
-		width: 100%;
-	}
-}*/
-.carouselText{
-	grid-column: 1;
-	grid-row: 2;
-	padding: 0px 32px;
-	place-self: center;
-}
-/*@media(min-width: 426px){
-	.carouselText{
-		grid-column: 2;
-		grid-row: 1;
-	}
-}
-@media(min-width: 426px){
-	#compsciText{
-	}
-}*/
 #rightarrow{
 	grid-column: 3;
 	padding-right: 20px;
@@ -188,9 +112,9 @@ button{
   color: black;
 }
 #dots{
-	text-align: center;
-	grid-column: 2 / 3;
-	padding: 15px;
+    text-align: center;
+    grid-column: 2 / 3;
+    place-self: center;
 }
 .dot {
 	  cursor: pointer;
@@ -205,8 +129,21 @@ button{
 .active, .dot:hover {
   	background-color: black;
 }
-.hidden{
-	display: none;
+.carousel{
+	grid-column: 2;
+	display: grid;
+}
+.carouselPic{
+	grid-row: 1;
+	width: 80%;
+	max-width: 250px;
+	place-self: center;
+}
+.carouselText{
+	/*grid-column: 1;*/
+	grid-row: 2;
+	padding: 0px 32px;
+	place-self: center;
 }
 
 footer{
@@ -218,12 +155,78 @@ footer{
 footer, #footer{
 	height: 75px;
 }
-/*@media(min-width: 426px){
-	footer, #footer{
-		height: 100px;
-	}
-}*/
 .footer{
 	grid-row: 3;
 	width: 100%;
+}
+
+@media(min-width: 700px){
+	h3{
+		font-size: calc(0.8em + 0.3vw + 0.3vh);
+	}
+	header h2{
+	  	font-size: 1.5em;
+	}
+	#intro{
+		margin-bottom: 20px;
+	}
+	#introductionPic{
+		grid-column: 2;
+		padding-left: 10px;
+		height: auto;
+		/*max-height: 300px;*/
+		/*width: auto;*/
+		/* Test */
+		width: 30vw;
+		max-width: 315px;
+		/* Test */
+		justify-self: left;
+	}
+	#introductionText{
+		width: 50vw;
+		grid-row: 1;
+		padding-top: 20px;
+		text-align: left;
+		justify-self: right;
+	}
+	/* Test */
+	#introductionText h1{
+		font-size: min(4.2vw, 45px);
+	}
+	#introductionText h3{
+		font-size: min(2.3vw, 25px);
+	}
+	/* Test */
+
+	.carousel{
+		margin-bottom: 10px;
+	}
+	.carouselPic{
+		grid-column: 1;
+		/*padding-left: 40px;*/
+		/*width: auto;*/
+		/* Test */
+		width: 32vw;
+		min-width: 250px;
+		max-width: 350px;
+		height: auto;
+		/*height: 21vw;*/
+		/*max-width: none;*/
+		/* Test */
+	}
+	.carouselText{
+		grid-column: 2;
+		grid-row: 1;
+		/*width: 45vw;
+*/	}
+	#leftarrow, #rightarrow{
+		width: 15vw;
+	}
+	#leftarrow{
+		justify-self: right;
+	}
+}
+
+.hidden{
+	display: none;
 }
