--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h3{
 	font-size: 0.8em;
 }
 body{
+	background-color: #E9ECE6;
 	font-family: "Montserrat", sans-serif;
 	margin: 0;
 	position: relative;
@@ -42,6 +43,7 @@ header ul{
 	display: flex;
 	list-style-type: none;
 	padding-top: 7px;
+	padding-right: 10px;
 }
 header li {
     padding: 0px 5px;
@@ -84,7 +86,7 @@ header img{
 }
 
 #carouselBanner{
-	background-color: rgb(236,228,228);
+	background-color: #CDCFA5;
 	grid-row: 3;
 	display: grid;
 	padding: 20px 0;
@@ -103,7 +105,7 @@ button{
 }
 #leftarrow, #rightarrow{
 	grid-row: 1 / 3;
-	background: rgb(236,228,228);
+	background: #CDCFA5;
 	font-weight: bold;
   	font-size: 18px;
   	color: #717171;
