--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header img{
 }
 
 #carouselBanner{
-	background-color: #CDCFA5;
+	background-color: #a1b0bf;
 	grid-row: 3;
 	display: grid;
 	padding: 20px 0;
@@ -105,7 +105,7 @@ button{
 }
 #leftarrow, #rightarrow{
 	grid-row: 1 / 3;
-	background: #CDCFA5;
+	background: #a1b0bf;
 	font-weight: bold;
   	font-size: 18px;
   	color: #717171;
